fix: fix errors&upd swg docs&add router endpoints
