# internal/app/router/router.go
@@ -70,7 +70,7 @@ func NewRouter(delivery *delivery.Delivery, logger *zap.Logger) *Router {
 			"GetFileList",
 			http.MethodGet,
 			"/images/list",
-			noOpMiddleware,
+			AdminAuth(),
 			delivery.GetFileList,
 		},
 		// -------------------------CATEGORY----------------------------------------------------------------------------
@@ -212,21 +212,21 @@ func NewRouter(delivery *delivery.Delivery, logger *zap.Logger) *Router {
 			"AddFavouriteItem",
 			http.MethodPost,
 			"/items/addFav/:userID/:itemID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.AddFavouriteItem,
 		},
 		{
 			"DeleteFavouriteItem",
 			http.MethodDelete,
 			"/items/deleteFav/:userID/:itemID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.DeleteFavouriteItem,
 		},
 		{
 			"GetFavouriteItems",
 			http.MethodGet,
 			"/items/favList/", //?param=userIDt&offset=20&limit=10&sort_type=name&sort_order=asc (sort_type == name or price, sort_order == asc or desc)
-			noOpMiddleware,
+			UserAuth(),
 			delivery.GetFavouriteItems,
 		},
 		// -------------------------CART--------------------------------------------------------------------------------
@@ -234,42 +234,42 @@ func NewRouter(delivery *delivery.Delivery, logger *zap.Logger) *Router {
 			"GetCart",
 			http.MethodGet,
 			"/cart/:cartID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.GetCart,
 		},
 		{
 			"GetCartByUserId",
 			http.MethodGet,
 			"/cart/byUser/:userID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.GetCartByUserId,
 		},
 		{
 			"CreateCart",
 			http.MethodPost,
 			"/cart/create/:userID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.CreateCart,
 		},
 		{
 			"AddItemToCart",
 			http.MethodPut,
 			"/cart/addItem",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.AddItemToCart,
 		},
 		{
 			"DeleteItemFromCart",
 			http.MethodDelete,
 			"/cart/delete/:cartID/:itemID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.DeleteItemFromCart,
 		},
 		{
 			"DeleteCart",
 			http.MethodDelete,
 			"/cart/delete/:cartID",
-			noOpMiddleware,
+			UserAuth(),
 			delivery.DeleteCart,
 		},
 		// -------------------------USER--------------------------------------------------------------------------------
@@ -343,6 +343,49 @@ func NewRouter(delivery *delivery.Delivery, logger *zap.Logger) *Router {
 			"/user/rights/list",
 			AdminAuth(),
 			delivery.RolesList,
+		},
+		// -------------------------ORDER--------------------------------------------------------------------------------
+		{
+			"CreateOrder",
+			http.MethodPost,
+			"/order/create",
+			UserAuth(),
+			delivery.CreateOrder,
+		},
+		{
+			"GetOrder",
+			http.MethodGet,
+			"/order/:orderID",
+			UserAuth(),
+			delivery.GetOrder,
+		},
+		{
+			"GetOrdersForUsers",
+			http.MethodGet,
+			"/order/list/:userID",
+			UserAuth(),
+			delivery.GetOrdersForUser,
+		},
+		{
+			"DeleteOrder",
+			http.MethodDelete,
+			"/order/delete/:orderID",
+			AdminAuth(),
+			delivery.DeleteOrder,
+		},
+		{
+			"ChangeAddress",
+			http.MethodPatch,
+			"/order/changeaddress",
+			UserAuth(),
+			delivery.ChangeAddress,
+		},
+		{
+			"ChangeStatus",
+			http.MethodPatch,
+			"/order/changestatus",
+			AdminAuth(),
+			delivery.ChangeStatus,
 		},
 	}
 
